frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: expense
  labels:
    app: frontend
    tier: web
    project: expense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      tier: web
      project: expense
  template:
    metadata:
      labels:
        app: frontend
        tier: web
        project: expense
    spec:
      containers:
      - name: nginx
        image: sreekanthgorantla/frontend:1.0.0
        resources:
          requests:
            memory: "68Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "150m"
        ports:
        - containerPort: 8080
        volumeMounts:
            - name: nginx
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
